re PR c++/37450 (C++ FE times out on duplicated parameter)

2008-09-17  H.J. Lu  <hongjiu.lu@intel.com>

	PR c++/37450
	* name-lookup.c (pushdecl_maybe_friend): Don't return the old
	parameter for duplicate.

From-SVN: r140425